--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +7,16 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    
-    
+
+
     <EditText
         android:id="@+id/etText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Anagram"/>
+        android:autofillHints=""
+        android:hint="@string/enter_anagram"
+        android:inputType="text"
+        android:minHeight="48dp" />
 
 
     <LinearLayout
@@ -26,14 +28,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Save"/>
+            android:text="@string/save"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bOutput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Output"/>
+            android:text="@string/output"/>
 
     </LinearLayout>
 
